# flax-metrics

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: binary.rst  conf.py  dot_product_ranking.rst  index.rst  ranking.rst
src/flax_metrics/: __init__.py  binary.py  dot_product_ranking.py  ranking.py
tests/: conftest.py  test_binary.py  test_dot_product_ranking.py  test_ranking.py
