[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flax-metrics"
version = "0.1.0"
description = "Flax NXX implementation of common metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.7",
]

[dependency-groups]
dev = [
    "ir-measures>=0.3.4",
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
]
